rust/crates/atomcad-structure-designer/tests/structure_designer/nodes/snapshots/structure_designer__node_snapshots_test__rotation_demo_evaluation.snap
---
source: tests/structure_designer/nodes/node_snapshots_test.rs
expression: snapshot
---
{
  "network_name": "sample",
  "node_count": 8,
  "return_node_id": 2,
  "displayed_node_outputs": [
    {
      "node_id": 2,
      "node_type": "polar_pattern",
      "output": "Error: Error in polar_pattern"
    }
  ]
}
